tests/golden/type_errors/named_struct_duplicate_field.cd
struct Person { name: string, name: number }
